--- a/index.html
+++ b/index.html
@@ -17,14 +17,13 @@
 
     <header class="header">
 
-
         <nav class="nav">
             <div class="logo-box">
                 <h1>NOSARO</h1>
             </div>
 
             <div class="menu">
-                <a href="#">Inicio</a><p>|</p><a href="#">Desarrollo Web</a><p>|</p><a href="#">Marketing</a><p>|</p><a href="#">Nosotros</a><p>|</p><a href="#">Contacto</a>
+                <a href="#">Inicio</a><p>|</p><a href="#">Servicios</a><p>|</p><a href="#">Clientes</a><p>|</p><a href="#">Nosotros</a><p>|</p><a href="#">Contacto</a>
             </div>
         </nav>
 
@@ -34,28 +33,33 @@
                 <h2>¿EN QUE PODEMOS AYUDARTE?</h2><hr>
 
                 <div class="contenido1">
-                                    
-                    <div class="card" id="dw">
-                        <a href="#" class="button-card"><h4>DESARROLLO WEB</h4></a>
+
+                    <div class="card" id="card-dw"> <!--IMG-->
+                        <div class="filter-blur"> <!--BLUR-->
+                            <a href="#" class="button-card"><h4>DESARROLLO WEB</h4></a>
+                        </div>
                     </div>
 
-                    <div class="card">
-                        <a href="#" class="button-card" id="mk"><h4>MARKETING</h4></a>
+                    <div class="card" id="card-marketing">
+                        <div class="filter-blur">
+                            <a href="#" class="button-card"><h4>MARKETING</h4></a>
+                        </div>
                     </div>
 
 
-                    <div class="card">
-                        <a href="#" class="button-card" id=""><h4>FINANCIAMIENTO</h4></a>
+                    <div class="card" id="card-software">
+                        <div class="filter-blur">
+                            <a href="#" class="button-card"><h4>SOFTWARE</h4></a>
+                        </div>
                     </div>
 
                     <p class="p-card" id="1">Todo tipo de dearrollo web</p>
                     <p class="p-card" id="2">Community manager, seo, asesoramiento</p>
-                    <p class="p-card" id="3">Financiamiento para todo tipo de trabajo.</p>
+                    <p class="p-card" id="3">Software para todo tipo de trabajo.</p>
                 </div>
             </div>
         </div>
 
-        
     </header>
 
     <main class="main">
@@ -90,9 +94,17 @@
             </section>
 
                                     <!--SECTION 5-->
+            <section class="Software">
+                <h2>DESARROLLO DE SOFTWARE</h2>
+                <div class="contenido5">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non pariatur in atque deleniti ducimus, ut delectus recusandae expedita quia aliquid facere a tenetur voluptates quae quidem numquam quis tempora neque?</p>
+                </div>
+            </section>
+
+                                    <!--SECTION 6-->
             <section class="contacto">
                 <h2>CONTACTO</h2>
-                <div class="contenido5">
+                <div class="contenido6">
 
                 </div>
             </section>
@@ -100,7 +112,7 @@
 
     </main>
 
-    <footer class="header"></footer>
+    <footer class=""></footer>
 
 <!--SCRYPT-->
 <script src="scrypt.js"></script>
