--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class="header">
         <nav class="nav">
             <div class="logo-box">
-                <h1>CONNECTIA</h1>
+                <img src="./connectia.jpg" alt="logo">
             </div>
 
             <div class="menu">
@@ -49,9 +49,9 @@
                         </div>
                     </div>
 
-                    <p class="p-card" id="1">Todo tipo de dearrollo web</p>
+                    <!--<p class="p-card" id="1">Todo tipo de dearrollo web</p>
                     <p class="p-card" id="2">Community manager, seo, asesoramiento</p>
-                    <p class="p-card" id="3">Software para todo tipo de trabajo.</p>
+                    <p class="p-card" id="3">Software para todo tipo de trabajo.</p>-->
                 </div>
             </div>
         </div>
@@ -60,14 +60,15 @@
 
 
 <main class="main">
+
 <!--ANCLA--><a name="ancla-nosotros"></a><!--ANCLA-->
         <div class="skew-arriba" id="skew-main"></div>
-        <div class="container">
 
+        <div class="container">
                                     <!--SECTION 1-->
             <section class="QuienesSomos">
                 <h2>¿QUIENES SOMOS?</h2>
-                <div class="contenido1">
+                <div class="contenido contenido1">
                     <p>Somos una agencia de tecnología digital, especializada en desarrollar estrategias, identificar Insights y analizar datos. <br> <br>
                         Somos especialistas en Marketing digital, SEO, SEM, Redes sociales, Social Media, Marketing de contenidos, Email Marketing, desarrollo de sistemas web, desktop, mobile. <br> <br>
                         Potenciamos tu marca y anticipamos las necesidades de la audiencia, optimizando la performance de inversiones y recursos. <br> <br>
@@ -77,8 +78,7 @@
                     <button type="button" onclick="verMas();" id="verMas">VER MÁS >></button>
 <!--ANCLA--><a name="ancla-desarrolloweb"></a><!--ANCLA-->
                     <div id="mas">
-                        <p>
-                            ati dolorem facilis, vitae inventore at? Vel molestias, cumque officia facilis dolorum magni dolore ad adipisci culpa reprehenderit omnis laudantium dolor, iusto et ipsam quis cum voluptas voluptatum similique?
+                        <p>ati dolorem facilis, vitae inventore at? Vel molestias, cumque officia facilis dolorum magni dolore ad adipisci culpa reprehenderit omnis laudantium dolor, iusto et ipsam quis cum voluptas voluptatum similique?
                             Quidem sit beatae animi fugiat omnis iusto, adipisci commodi laborum ut, ratione nam dicta quia dolores quo ipsam repellat accusamus culpa ullam at dolor sunt, expedita unde architecto aliquid! Amet?
                             Inventore reiciendis, iure maxime distinctio vitae aliquam corporis debitis similique architecto fuga nostrum harum hic! Id, rem animi. Temporibus distinctio aperiam vero ut. Reiciendis, minima? Commodi sunt fuga qui ex.
                             Voluptate ut earum architecto voluptates commodi in error quisquam rerum id sint, molestias ratione nihil explicabo eligendi assumenda incidunt eaque laborum impedit? Accusantium accusamus culpa dolores? Incidunt obcaecati unde porro?
@@ -91,8 +91,13 @@
                                     <!--SECTION 2-->
             <section class="DesarrolloWeb">
                 <h2>DESARROLLO WEB</h2>
-                <div class="contenido2">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, consectetur, quam nisi magnam eligendi laborum, totam officia sequi facere fugiat obcaecati molestias enim cupiditate facilis.</p>
+                <div class="contenido contenido2">
+                    <p>Diseñamos y desarrollamos las aplicaciones web o páginas de internet, seleccionando el mejor lenguaje de programación que se adapte a tus necesidades. <br> <br>
+
+                        Creamos sitios web, landing page, micro-sitios de alto impacto, con facilidad de uso, SEO, capacidad de respuesta para dispositivos móviles, velocidad de carga y una estética de diseño respetando la imagen institucional <br> <br>
+                        
+                        En la Argentina, el 64% de los hogares urbanos tiene acceso a una computadora, el 90% acceso a internet y el 88% de las personas emplean teléfono celular.  La facturación por comercio electrónico creció 124% en Argentina durante 2020. De acuerdo con un informe que realizó la Cámara Argentina de Comercio Electrónico (CACE) junto a la consultora Kantar, en 2020 hubo casi 1,3 millones de personas que empezaron a comprar a través de internet. <br> <br>
+                        </p>
                     <!--carousel imagenes de proyectos-->
 <!--ANCLA--><a name="ancla-marketing"></a><!--ANCLA-->
                 </div>
@@ -100,9 +105,14 @@
 
                                     <!--SECTION 3-->
             <section class="MarketingWeb">
-                <h2>MARKETING WEB</h2>
-                <div class="contenido3">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non pariatur in atque deleniti ducimus, ut delectus recusandae expedita quia aliquid facere a tenetur voluptates quae quidem numquam quis tempora neque?</p>
+                <h2>MARKETING DIGITAL</h2>
+                <div class="contenido contenido3">
+                    <p>Cada cliente tiene una necesidad, una realidad y una competencia distinta. Nuestras políticas y campañas son personalizadas, asesorando en cada caso sobre las mejores prácticas del mercado. Trabajamos en conjunto con vos, mediante un feedback fluido y cotidiano. <br> <br>
+
+                        Desarrollamos estrategias digitales integrales. Branding, DAFO, Buyer persona, SEO, SEM, Publicidad online, redes sociales, e-mail Marketing, Community Manager, Marketing de afiliación, e-commerce, entre muchas cosas más. <br> <br>  
+                        
+                        Con el enorme crecimiento de internet, destacarse en los medios digitales se volvió más complejo que nunca: la competencia se multiplica y cada vez es más profesionalizada. Por eso, es mejor dejarse guiar por alguien que conozca bien el camino.
+                        </p>
 <!--ANCLA--><a name="ancla-software"></a><!--ANCLA-->
                 </div>
             </section>
@@ -110,7 +120,7 @@
                                     <!--SECTION 4-->
             <section class="Software">
                 <h2>DESARROLLO DE SOFTWARE</h2>
-                <div class="contenido4">
+                <div class="contenido contenido4">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non pariatur in atque deleniti ducimus, ut delectus recusandae expedita quia aliquid facere a tenetur voluptates quae quidem numquam quis tempora neque?</p>
 <!--ANCLA--><a name="ancla-contacto"></a><!--ANCLA-->
                 </div>
@@ -119,7 +129,7 @@
                                     <!--SECTION 5-->
             <section class="contacto">
                 <h2>CONTACTO</h2>
-                <div class="contenido5">
+                <div class="contenido contenido5">
                 </div>
             </section>
         </div>
