--- a/index.html
+++ b/index.html
@@ -8,13 +8,20 @@
     <!--GOOGLE FONTS-->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
-    <!--CSS-->
+     <!--CSS-->
     <link rel="stylesheet" href="style.css">
+
+
+
 </head>
 
 
-<body>
+    
 
+<body class="body">
+    <!-- particles.js container -->
+<div id="particles-js"></div>
+<div class="contenedor header">
     <header class="header">
         <nav class="nav">
             <div class="logo-box">
@@ -137,9 +144,11 @@
 
 <footer class=""></footer>
 
-<!--SCRYPT-->
-<script src="scrypt.js"></script>
-<script src="glider.js"></script>
+</div>
+
+    <!-- scripts -->
+    <script src="js/particles.js"></script>
+    <script src="js/app.js"></script>
 
 </body>
 </html>
