--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         Nos especializamos en el desarrollo de Líderes de Transformación, Agentes de Cambio, Equipos de Alto Impacto y Organizaciones Conscientes. <br> <br>
                     </p>
 
-                    <button type="button" onclick="verMas();" id="verMas">VER MÁS >></button>
+                    <button type="button" onclick="verMas();" id="verMas">VER MÁS</button>
 <!--ANCLA--><a name="ancla-desarrolloweb"></a><!--ANCLA-->
                     <div id="mas">
                         <p>ati dolorem facilis, vitae inventore at? Vel molestias, cumque officia facilis dolorum magni dolore ad adipisci culpa reprehenderit omnis laudantium dolor, iusto et ipsam quis cum voluptas voluptatum similique?
@@ -90,7 +90,7 @@
                             Inventore reiciendis, iure maxime distinctio vitae aliquam corporis debitis similique architecto fuga nostrum harum hic! Id, rem animi. Temporibus distinctio aperiam vero ut. Reiciendis, minima? Commodi sunt fuga qui ex.
                             Voluptate ut earum architecto voluptates commodi in error quisquam rerum id sint, molestias ratione nihil explicabo eligendi assumenda incidunt eaque laborum impedit? Accusantium accusamus culpa dolores? Incidunt obcaecati unde porro?
                         </p>
-                        <button type="button" onclick="verMenos();" id="verMenos">&lt;&lt; VER MENOS</button>
+                        <button type="button" onclick="verMenos();" id="verMenos">VER MENOS</a>
                     </div>
                 </div>
             </section>
@@ -147,8 +147,8 @@
 </div>
 
     <!-- scripts -->
-    <script src="js/particles.js"></script>
-    <script src="js/app.js"></script>
+    <script src="./particles.js"></script>
+    <script src="./app.js"></script>
 
 </body>
 </html>
