--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body class="body">
     <!-- particles.js container -->
 <div id="particles-js"></div>
-<div class="contenedor header">
+<div class="contenedor">
     <header class="header">
         <nav class="nav">
             <div class="logo-box">
@@ -142,7 +142,11 @@
         </div>
 </main>
 
-<footer class=""></footer>
+<footer class="footer">
+    <div class="cont-footer">
+        <p>Todos los derechos reservados - &copy;CONNECTIA 2021</p>
+    </div>
+</footer>
 
 </div>
 
